--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,19 +10,42 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
+    "@react-three/drei": "^9.112.0",
+    "@react-three/fiber": "^8.17.7",
+    "@react-three/postprocessing": "^2.16.2",
+    "@types/three": "^0.168.0",
+    "axios": "^1.7.9",
+    "framer-motion": "^11.18.0",
+    "gsap": "^3.12.7",
+    "imagesloaded": "^5.0.0",
+    "locomotive-scroll": "^4.1.4",
+    "postprocessing": "^6.36.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.2",
+    "react-slick": "^0.30.3",
+    "react-spring": "^9.7.5",
+    "react-toastify": "^11.0.3",
+    "styled-component": "^2.8.0",
+    "styled-components": "^6.1.14",
+    "three": "^0.168.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   }
 }
