--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "genetic-js": "^0.1.14",
+    "helmet": "^8.0.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
+    "module": "^1.2.5",
     "mongoose": "^8.9.3",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.9"
   }
 }
