--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "@react-three/postprocessing": "^2.16.2",
     "@types/three": "^0.168.0",
     "axios": "^1.7.9",
-    "framer-motion": "^11.18.0",
+    "framer-motion": "^11.18.2",
     "gsap": "^3.12.7",
     "imagesloaded": "^5.0.0",
     "locomotive-scroll": "^4.1.4",
@@ -25,10 +25,11 @@
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.2",
+    "react-router-dom": "^7.3.0",
     "react-slick": "^0.30.3",
     "react-spring": "^9.7.5",
     "react-toastify": "^11.0.3",
+    "react-window": "^1.8.11",
     "styled-component": "^2.8.0",
     "styled-components": "^6.1.14",
     "three": "^0.168.0"
