--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.9",
     "framer-motion": "^11.18.2",
     "gsap": "^3.12.7",
+    "html2canvas": "^1.4.1",
     "imagesloaded": "^5.0.0",
     "locomotive-scroll": "^4.1.4",
     "postprocessing": "^6.36.2",
