--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "gsap": "^3.12.7",
     "html2canvas": "^1.4.1",
     "imagesloaded": "^5.0.0",
+    "jspdf": "^3.0.1",
     "locomotive-scroll": "^4.1.4",
     "postprocessing": "^6.36.2",
     "react": "^18.3.1",
