--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,11 +29,12 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.3.0",
     "react-slick": "^0.30.3",
+    "react-spinners": "^0.17.0",
     "react-spring": "^9.7.5",
     "react-toastify": "^11.0.3",
     "react-window": "^1.8.11",
     "styled-component": "^2.8.0",
-    "styled-components": "^6.1.14",
+    "styled-components": "^6.1.17",
     "three": "^0.168.0"
   },
   "devDependencies": {
